# libstego

./: .gitignore  CMakeLists.txt  README  SConstruct  TODO  doxygen.conf
limejuice/: lime_control.py  limejuice.glade  limejuice.py
python_bindings/: SConscript  libstego.i
src/: CMakeLists.txt  SConscript  libstego.spec  libstegofile.spec
src/include/libstego/: errors.h  types.h  utils.h
src/libstego/: CMakeLists.txt  SConscript  battlesteg.c  cpt.c  echo_hiding.c  epi.c  errors.c  f5.c  frirui.c  gif_helpers.c  gifshuffle.c  lsb.c  mb2.c  mb2_rangecoder.c  phase_coding.c  pq.c  pw.c  random.c  sort_unsort.c  svg_steg.c  t.c  utils.c  whirlpool.c
src/libstego/include/libstego/: 64bit_tables.h  battlesteg.h  cpt.h  echo_hiding.h  epi.h  f5.h  frirui.h  gif_helpers.h  gifshuffle.h  libstego.h  lsb.h  mb2.h  mb2_rangecoder.h  phase_coding.h  pq.h  pq_quanttbl.h  pw.h  random.h  sort_unsort.h  stegoutils.h  svg_steg.h  t.h  whirlpool.h
src/libstegofile/: CMakeLists.txt  SConscript  SConstruct  bmp.c  errors.c  gif.c  jpeg.c  png.c  svg.c  wav.c
src/libstegofile/include/libstego/: bmp.h  gif.h  jpeg.h  png.h  svg.h  wav.h
stego_ui/: lemonjuice.glade  lemonjuice.py  lime_control.py  steg_io1.glade  steg_io2.glade  stegui_ctrl.py  stegui_vw.py  stegui_vw2.py
swig_bindings/: CMakeLists.txt  binding_test.py  libstego.i  libstegofile.i  linkfix.sh  make_libstego.sh  make_libstegofile.sh  prefix
test/: advgifshuffle-test.c  bs-embed-test.c  bs-extract-test.c  cpt-test.c  eh-embed-test.c  eh-extract-test.c  f5-embed-test.c  f5-extract-test.c  frirui-embed-test.c  get_set_msg_block-test.c  gif-test.c  gifshuffle-test.c  lsb-test.c  lsb.txt  pc-embed-test.c  pc-extract-test.c  pq-embed-test.c  pq-extract-test.c  random-test.c  shakespeare.txt  sort_unsort-test.c  svg-test.c  template.c  test-advgifshuffle  test-battlesteg  test-cpt  test-eh  test-f5  test-frirui  test-get_set_msg_block  test-gif  test-gifshuffle  test-lsb  test-pq  test-random  test-sort_unsort  test-svg  test-template  test-wav  testall  (+1 more)
