cmake_minimum_required (VERSION 2.6)

project (libstego)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")



INCLUDE(InstallRequiredSystemLibraries)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "libstego")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "90")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "libstego_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
INCLUDE(CPack)

OPTION(BUILD_LIBSTEGO "build libstego library" ON)
OPTION(BUILD_LIBSTEGOFILE "build libstegofile library" ON)
OPTION(BUILD_BINDINGS "build swig bindings" ON)

IF(BUILD_LIBSTEGO)
  add_subdirectory (src/libstego)
ENDIF()

IF(BUILD_LIBSTEGOFILE)
  add_subdirectory(src/libstegofile)
ENDIF()

IF(BUILD_BINDINGS)
  add_subdirectory (swig_bindings)
ENDIF()
